AkshayVispute-Salesforce/akshay.vispute@eternussolutions.com/src/objects/Bill__c.object
<CustomObject>
    <fields>
        <fullName>Bill_No__c</fullName>
        <externalId>true</externalId>
        <label>Bill No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Bill</relationshipLabel>
        <relationshipName>Bill</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <picklist>
            <picklistValues>
                <fullName>Novel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>